Update test harness to warm up each puzzle for 300 ms
Rather than for 10 repetitions each. This now gives the short-running puzzles
more of a chance to JIT compile, and avoids needlessly re-running the long
puzzles, as these will already have had their hot code detected.